Complete Smart Humanitarian Platform for Morocco
Backend:
- Spring Boot 3.2.5, Java 21, Spring Security with JWT
- 11 CRUD modules: Users, Roles, Missions, Volunteers, Beneficiaries, Donors, Donations, Convoys, Events, Reports, Notifications
- Smart Decision Support: Mission priority scoring, Volunteer recommendations, Beneficiary emergency levels, Donor loyalty classification
- PDF report generation (OpenPDF)
- DataSeeder with 30 missions, 50 volunteers, 100 beneficiaries, 100 donations, 20 convoys, 15 events
- H2 and MySQL profiles
- CORS configuration in SecurityFilterChain
- Unified report endpoint

Frontend:
- React 18 + Vite, Bootstrap 5
- Dashboard with Chart.js statistics
- Leaflet map centered on Morocco
- i18next multilingual (FR/AR/EN)
- SweetAlert2 notifications
- Complete CRUD pages for all modules
- Role-based routing and protected routes
- Responsive design with sidebar navigation

Co-Authored-By: Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>